--- a/src/main/resources/static/hello.html
+++ b/src/main/resources/static/hello.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="webjars/jquery/dist/jquery.min.js"></script>
+    <script>
+        $(function() {
+            alert("ready!")
+        })
+    </script>
 </head>
 <body>
     static resource html
